# kairei

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DevinReadme.md  Dockerfile  LICENSE.txt  Makefile  README.md  cloudbuild.yaml  test_formatting.rs
kairei-cli/: Cargo.toml  README.md
kairei-cli/src/: api_client.rs  config.rs
kairei-cli/tests/: README.md  api_integration_test.rs  cli_login_test.rs
kairei-core/: Cargo.toml
kairei-core/benches/: benchmark.rs  shared_memory_benchmarks.rs
kairei-core/src/: agent_registry.rs  ast.rs  ast_registry.rs  config.rs  gen.rs  lib.rs  preprocessor.rs  runtime.rs  system.rs  system_api_impl.rs  timestamp.rs
kairei-core/src/analyzer/: combinators.rs  core.rs  doc_parser.rs  documentation_collector.rs  mod.rs  prelude.rs
kairei-core/src/analyzer/parsers/: agent.rs  doc_answer_handlers.rs  doc_event_handlers.rs  doc_expression.rs  doc_lifecycle_handlers.rs  doc_statement.rs  doc_system_handlers.rs  doc_types.rs  expression.rs  mod.rs  root.rs  statement.rs  types.rs  world.rs
kairei-core/src/api/: agent.rs  event.rs  mod.rs  models.rs  state.rs  system.rs
kairei-core/src/ast/: sistence.rs
kairei-core/src/core/: types.rs
kairei-core/src/eval/: context.rs  evaluator.rs  expression.rs  mod.rs  statement.rs
kairei-core/src/event/: event_bus.rs  event_registry.rs  mod.rs  request_manager.rs
kairei-core/src/formatter/: config.rs  error.rs  visitor.rs
kairei-core/src/native_feature/: metrics.rs  native_registry.rs  ticker.rs
kairei-core/src/provider/: capability.rs  llm.rs  mod.rs  plugin.rs  provider.rs  provider_registry.rs  request.rs  types.rs
kairei-core/src/provider/capabilities/: common.rs  mod.rs  relevant_memory.rs  shared_memory.rs  sistence_memory.rs  sistence_storage.rs  storage.rs  will_action.rs
kairei-core/src/provider/config/: base.rs  errors.rs  mod.rs  validator.rs
kairei-core/src/provider/generator/: generator.rs  optimizer.rs
kairei-core/src/provider/llms/: mod.rs  openai_assistant.rs  openai_chat.rs  simple_expert.rs
kairei-core/src/provider/plugins/: general_prompt.rs  memory.rs  mod.rs  persistent_shared_memory.rs  policy.rs  shared_memory.rs  shared_memory_adapter.rs  shared_memory_error_tests.rs  web_search_serper.rs  will_action.rs
kairei-core/src/provider/providers/: mod.rs  sistence.rs  sistence_test.rs  standard.rs
kairei-core/src/provider/storage/: backend.rs  mod.rs
kairei-core/src/provider/tests/: mod.rs  (+2 more)
kairei-core/src/sistence/: error.rs  mod.rs  service.rs  types.rs
kairei-core/src/tokenizer/: comment.rs  keyword.rs  literal.rs  mod.rs  symbol.rs  token.rs  whitespace.rs
kairei-core/src/type_checker/: checker.rs  error.rs  mod.rs  plugin_config_validator.rs
kairei-core/tests/: doc_answer_handlers_integration_test.rs  doc_collector_integration_test.rs  doc_event_handlers_integration_test.rs  doc_lifecycle_handlers_integration_test.rs  doc_parser_integration_test.rs  doc_statement_integration_test.rs  doc_system_handlers_integration_test.rs  doc_types_integration_test.rs  documentation_system_integration_test.rs  event_bus_test.rs  init_test.rs  mod.rs  parser_test.rs  runtime_test.rs  span_tracking_test.rs  system_test.rs
kairei-core/tests/integration/: mod.rs  multi_line_span_tracking.rs  span_tracking.rs  span_tracking_fixed_v4.rs  system_span_tracking.rs
kairei-core/tests/micro_agent_tests/: mod.rs  on_fail_test.rs  travel_planning_test.rs
kairei-core/tests/provider_tests/: mod.rs  openai_test.rs  provider_test.rs  serper_test.rs  sistence_integration_test.rs  test_secret.json.example  validation_e2e_test.rs  validation_integration_test.rs
kairei-core/tests/shared_memory_tests/: gcp_storage_backend_tests.rs  mod.rs  persistent_shared_memory_tests.rs  shared_memory_concurrency_tests.rs  shared_memory_integration_tests.rs
kairei-core/tests/span_tests/: mod.rs  multi_line_span_tracking.rs  span_tracking.rs  system_span_tracking.rs
kairei-core/tests/type_checker_tests/: await_expression_test.rs  binary_op_inference_test.rs  mod.rs  plugin_integration.rs  request_expression_test.rs  request_handler_type_checking.rs  think_expression_test.rs
kairei-http/: Cargo.toml  README.md
kairei-http/dsl/assistants/: completion_assistant.kairei
kairei-http/dsl/fixers/: code_fixer.kairei
kairei-http/dsl/validators/: answer_validator.kairei  lifecycle_validator.kairei  micro_validator.kairei  observe_validator.kairei  policies_validator.kairei  react_validator.kairei  state_validator.kairei  stete_validator.kairei  syntax_validator.kairei
kairei-http/src/: error.rs  lib.rs  server.rs
kairei-http/src/auth/: extractor.rs  middleware.rs  mod.rs  store.rs
kairei-http/src/handlers/: agents.rs  compiler.rs  docs.rs  events.rs  mod.rs  system.rs  test_helpers.rs
kairei-http/src/integration/: mod.rs
kairei-http/src/models/: agents.rs  compiler.rs  docs.rs  events.rs  mod.rs  system.rs  user.rs
kairei-http/src/routes/: agents.rs  events.rs  mod.rs  swagger.rs  system.rs
kairei-http/src/session/: data.rs  manager.rs
kairei-http/tests/: agents_routes_test.rs  compiler_handlers_test.rs  compiler_test.rs  docs_test.rs  dsl_block_splitter_test.rs  handlers_test.rs  mocks.rs  mod.rs  routes_test.rs  server_test.rs
src/: ast.rs  (+15 more)
(+312 files in other folders)
