[package]
name = "kairei"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.93", features = ["full"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
pretty_assertions = "1.4.1"
