[package]
name = "kairei"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.26.0"
async-recursion = "1.1.1"
async-trait = "0.1.83"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.31"
mockall = "0.13.1"
nom = "7.1.3"
nom_locate = "4.2.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
secrecy = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
strum = { version = "0.26.3", features = ["derive"] }
syn = { version = "2.0.93", features = ["full"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = { vearsion = "0.1.17", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
ctor = "0.2.9"
