[package]
name = "kairei-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive", "env"] }
directories = "5.0"
dotenv = "0.15.0"
kairei-core = { path = "../kairei-core" }
kairei-http = { path = "../kairei-http" }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.64"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.15", features = ["v4", "serde"] }
