[package]
name = "kairei-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.28.0"
async-recursion = "1.1.1"
async-trait = "0.1.83"
chrono = {version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
criterion = "0.5.1"
dashmap = "6.1.0"
futures = "0.3.31"
html2text = "0.13.6"
lazy_static = "1.5.0"
mockall = "0.13.1"
nom = { version = "7.1.3", features = ["alloc"] }
nom_locate = "4.2.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
regex = "1.11.1"
reqwest = "0.12.12"
ring = "0.17.12"
secrecy = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_with = {version = "3.12.0", features = ["chrono"]}
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
syn = { version = "2.0.93", features = ["full"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = {version = "5.3.1", features = ["axum_extras", "debug", "time", "chrono"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
ctor = "0.2.9"
proptest = "1.6.0"

[[bench]]
name = "benchmark"
harness = false
