[package]
name = "kairei-http"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
axum = { version = "0.8.1", features = ["json", "macros", "tokio"] }
clap = { version = "4.5.31", features = ["derive"] }
dashmap = "6.1.0"
kairei-core = { path = "../kairei-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = {version ="0.6.2",  features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = {version = "1.15", features = ["v4", "serde"] }

[dev-dependencies]
hyper = "1.6.0"
reqwest = {version = "0.12", features = ["json"] }
tower-service = "0.3.3"

